--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ujwal2003/todo-list-PERN-stack#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.2"
   }
